<resources>
    <string name="app_name">Kampus</string>
    <string name="StringSplashText">Welcome to Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="please_enter_name">Enter your name..</string>
    <string name="please_enter_last_name">Enter your last name..</string>
    <string name="please_enter_email">Enter your email..</string>
    <string name="please_enter_password">Enter your password..</string>
    <string name="please_enter_confirm_password">Enter your confirm password..</string>
    <string name="if_you_have_an_account">If you have an account</string>
    <string name="registersuccestext">Registration Successful</string>
    <string name="buttonsucces">Click to return to the login screen</string>
    <string name="dontAccount">if you don\'t have an account</string>
    <string name="signUp">Sign up</string>
    <string name="setting">Setting</string>
    <string name="profileName">Profile Name</string>
    <string name="status">Online</string>
    <string name="askQuestion">Send message..</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="peopleName">Halo</string>
    <string name="jobs">jobs</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enterJobs">Please Enter Your Job</string>
    <string name="changeProfileImage">Change</string>
    <string name="deleteAccounts">Delete Account</string>
    <string name="titleAlert">Please Confirm Delete</string>
    <string name="titleQuest">Are u sure you want to delete this account?</string>
    <string name="yesAnswer">Yes</string>
    <string name="noAnswer">No</string>
    <string name="toastSuccess">Deletion successful</string>
    <string name="toastChangeImageElse">You must choose a profile picture</string>
    <string name="toastChangeImageSuccess">Your profile picture has been changed</string>
    <string name="drawerMenuSettings">Settings</string>
    <string name="drawerMenuNotes">Notes</string>
    <string name="pickFile">Please Select File</string>
    <string name="ok">OK</string>
    <string name="fileUploaded">File uploaded</string>
    <string name="fileError">Error loading please check your connection and try again</string>
    <string name="acSet">a.Setting</string>
    <string name="delete_account_ask">Are you sure you want to delete your account?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="logOut">Log Out</string>
    <string name="lastAlert">One last step! To delete the account</string>
    <string name="notes">Notes</string>
    <string name="users">Users</string>
    <string name="communication">Communication</string>
    <string name="send">Send</string>
    <string name="your_message">Please contact to be a sharer.</string>
    <string name="message_confirm">Message Sent</string>
    <string name="message_confirm_message">Are you sure you want to send us a message?</string>
    <string name="message_sent_title">Message Sent</string>
    <string name="message_sent_msg">Your message has reached us. We will get back to you by e-mail as soon as possible.</string>
    <string name="message_empty_error">Please write something</string>
    <string name="register">Register</string>
    <string name="welcome_campus">Welcome to Campus</string>
    <string name="explanationFirstScreen">Enrich your university life with the Campus application, which makes it easy to share lecture notes! 📚✨</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="iconDesc">Please select profile photo</string>
    <string name="homeFragment">Users</string>
    <string name="please_enter_department">Please enter your department to share</string>
    <string name="search">Search</string>
    <string name="search_department">Select Department..</string>
    <string name="select_your_university">Select University..</string>
    <string name="departmentListLabel">Departments</string>
    <string name="universityNameLabel">Universities</string>
    <string name="sozelBolumler">Verbal Parts</string>
    <string name="sayisalBolumler">Numerical Sections</string>
    <string name="esitAgirlik">Equal Weight Sections</string>
    <string name="fourYears">4-Year Departments</string>
    <string name="twoYears">2-Year Departments</string>
    <string name="questionLogOut">Do you want to log out?</string>
    <string name="confirmLogOut">Confirm to log out.</string>
    <string name="setupDepartment">Edit Department</string>
    <string name="setupProfile">Edit Profile</string>
    <string name="backToLogin">Back to Login</string>
    <string name="l_tfen_dosya_se_iniz">Please Select File</string>
</resources>