<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navDrawView">

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/settingFragment"
                android:title="@string/setting" />
            <item
                android:id="@+id/deleteBottomSheetFragment"
                android:title="@string/deleteAccounts" />

        </menu>
    </item>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/communicationFragment"
                android:title="@string/communication" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_users"
        android:title="Show All Users"
        android:icon="@drawable/ic_people" />
</menu>
