<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.fragment.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginTop="95dp"
            android:src="@drawable/userimage"
            app:layout_constraintBottom_toTopOf="@id/registerText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="20dp"
            android:shadowColor="#80000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="10"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/register_nameText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_nameText"
            style="@style/FocusedEditTextStyle"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/please_enter_name"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/register_lastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_lastName"
            style="@style/FocusedEditTextStyle"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:hint="@string/please_enter_last_name"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/register_emailtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_emailtext"
            style="@style/FocusedEditTextStyle"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/please_enter_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tvProfession"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteY="315dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tvProfession"
            style="@style/FocusedEditTextStyle"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:hint="@string/enterJobs"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/register_passwordtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_passwordtext"
            style="@style/FocusedEditTextStyle"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/register_confirmpassword_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_confirmpassword_text"
            style="@style/FocusedEditTextStyle"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:drawablePadding="8dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/register_passwordtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="517dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButtonAuth"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/button_main_login_page"
            android:hint="@string/signUp"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_confirmpassword_text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/if_you_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerButtonAuth"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_Turn_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/btn"
            android:hint="@string/login"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@id/registerButtonAuth"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <ProgressBar
            android:id="@+id/progressBarRegister"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>